--- a/UdemyMicroservicesMehmetOzakaya/src/docker-compose.yml
+++ b/UdemyMicroservicesMehmetOzakaya/src/docker-compose.yml
@@ -1,9 +1,37 @@
 version: '3.4'
 
 services:
- catalogdb:
-  image: postgres
+  catalogdb:
+    image: postgres
 
+  basketdb:
+    image: postgres
+
+  distributedcashe:
+    image: redis
+
+  orderdb:
+    image: mcr.microsoft.com/mssql/server
+
+  catalog.api:
+    image: ${DOCKER_REGISTRY-}catalogapi
+    build:
+      context: .
+      dockerfile: Services/Catalog/Catalog.API/Dockerfile
+
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: Services/Basket/Basket.API/Dockerfile
+
+  discount.grpc:
+    image: ${DOCKER_REGISTRY-}discountgrpc
+    build:
+      context: .
+      dockerfile: Services/Discount/Discount.GRPC/Dockerfile
 
 volumes:
   postgres_catalog:
+  postgres_basket:
+
