--- a/UdemyMicroservicesMehmetOzakaya/src/BuildingBlocks/BuildingBlocksMessaging/BuildingBlocksMessaging.csproj
+++ b/UdemyMicroservicesMehmetOzakaya/src/BuildingBlocks/BuildingBlocksMessaging/BuildingBlocksMessaging.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="NewFolder\" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.3" />
   </ItemGroup>
 
 </Project>
