--- a/UdemyMicroservicesMehmetOzakaya/src/Services/Basket/Basket.API/Basket.API.csproj
+++ b/UdemyMicroservicesMehmetOzakaya/src/Services/Basket/Basket.API/Basket.API.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocksMessaging\BuildingBlocksMessaging.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks\BuildingBlocks.csproj" />
   </ItemGroup>
 
