--- a/UdemyMicroservicesMehmetOzakaya/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/UdemyMicroservicesMehmetOzakaya/src/Services/Ordering/Ordering.API/appsettings.json
@@ -13,5 +13,9 @@
     "UserName": "guest",
     "Password": "guest"
   },
+    "FeatureManagement": {
+      "OrderFullfilment": true
+    },
+  
   "AllowedHosts": "*"
 }
