complete the project

--- a/UdemyMicroservicesMehmetOzakaya/src/Services/Ordering/Ordering.API/Ordering.API.csproj
+++ b/UdemyMicroservicesMehmetOzakaya/src/Services/Ordering/Ordering.API/Ordering.API.csproj
@@ -7,6 +7,7 @@
 		<UserSecretsId>eb28169a-e8f1-4747-9e99-2ce414e23426</UserSecretsId>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 		<DockerfileContext>..\..\..</DockerfileContext>
+		<DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
 	</PropertyGroup>
 
 	<ItemGroup>
