--- a/UdemyMicroservicesMehmetOzakaya/src/docker-compose.yml
+++ b/UdemyMicroservicesMehmetOzakaya/src/docker-compose.yml
@@ -13,6 +13,9 @@ services:
   orderdb:
     image: mcr.microsoft.com/mssql/server
 
+  messagebroker:
+     image: rabbitmq:management
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
@@ -31,7 +34,21 @@ services:
       context: .
       dockerfile: Services/Discount/Discount.GRPC/Dockerfile
 
+  ordering.api:
+    image: ${DOCKER_REGISTRY-}orderingapi
+    build:
+      context: .
+      dockerfile: Services/Ordering/Ordering.API/Dockerfile
+
+  yarpapigateway:
+    image: ${DOCKER_REGISTRY-}yarpapigateway
+    build:
+      context: .
+      dockerfile: ApiGateways/WebApplication1/Dockerfile
+
 volumes:
   postgres_catalog:
   postgres_basket:
+
+
 
